--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 	</head>
 
 	<body>
+		{% include navigation/siblings.html %}
 		{{ content }}
 		{% include navigation/footer.html %}
 		<script>
