--- a/_layouts/short.html
+++ b/_layouts/short.html
@@ -4,14 +4,23 @@ icons: true
 header_class: short
 ---
 
-<header class="{{ page.header_class }}">
+<header class="short">
 	{% include navigation/top.html %}
 
 	<section>
 		<div class="wrapper">
-			<h1>{{ page.heading }}</h1>
+			{% if page.heading %}
+				<h1>{{ page.heading }}</h1>
+			{% elsif page.name %}
+				<h1>{{ page.name }}</h1>
+			{% elsif page.title %}
+				<h1>{{ page.title }}</h1>
+			{% endif %}
+
 			{% if page.subtitle %}
 				<p class="subtitle">{{ page.subtitle }}</p>
+			{% elsif page.description %}
+				<p class="subtitle">{{ page.description }}</p>
 			{% endif %}
 		</div>
 	</section>
