--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -91,3 +91,53 @@ select {
 code {
 	word-break: break-word;
 }
+
+
+.header-link {
+	margin-left: 10px;
+	opacity: 0;
+	transition: opacity ease 0.2s, color ease 0.2s;
+	text-decoration: none;
+	color: #888;
+	font-size: 0.9em;
+	vertical-align: bottom;
+
+	&:hover {
+		color: $brand-color;
+	}
+}
+
+h3:hover .header-link,
+h4:hover .header-link,
+h5:hover .header-link,
+h6:hover .header-link {
+	opacity: 1;
+}
+
+
+blockquote.explainer {
+	padding: 15px;
+	margin-left: 0;
+	margin-right: 0;
+	border-left: 5px solid $brand-color;
+	background-color: $brand-color-background;
+	transition: $transition-duration border-color ease, $transition-duration background-color ease;
+
+	&.warning {
+		background-color: $warning-color-light;
+		border-color: $warning-color;
+	}
+
+	&.error {
+		background-color: $error-color-light;
+		border-color: $error-color;
+	}
+
+	:first-child {
+		margin-top: 0;
+	}
+
+	:last-child {
+		margin-bottom: 0;
+	}
+}
