--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,13 @@
 		<link href="https://fonts.googleapis.com/css?family=Muli:400,600,700{% if layout.icons or page.icons %}|Material+Icons{% endif %}" rel="stylesheet">
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css" type="text/css">
 
-
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
 		<link rel="shortcut icon" type="image/png" sizes="128x128" href="/assets/favicon-128x128.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
 		<link rel="manifest" href="/assets/manifest.json">
 		<link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#407afc">
+		<meta name="msapplication-config" content="/assets/browserconfig.xml" />
 		<meta name="theme-color" content="#407afc">
 
 		{% feed_meta %}
