--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -5,6 +5,7 @@
 @import "landing-page";
 @import "form";
 @import "layout";
+@import "docs";
 @import "cta";
 @import "features";
 @import "pricing";
