--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -36,12 +36,13 @@
 	max-width: 100%;
 	height: auto;
 	display: block;
-	box-shadow: 0 2px 0 0 #DDD;
 	border-radius: $border-radius;
 	margin-left: auto;
 	margin-right: auto;
-	background: #DDD url(data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2244%22%20height=%2212%22%20viewBox=%220%200%2044%2012%22%3E%3Ccircle%20cx=%226%22%20cy=%226%22%20r=%224%22%20fill=%22#FC625D%22/%3E%3Ccircle%20cx=%2222%22%20cy=%226%22%20r=%224%22%20fill=%22#FDBC40%22/%3E%3Ccircle%20cx=%2238%22%20cy=%226%22%20r=%224%22%20fill=%22#35CC4B%22/%3E%3C/svg%3E) 4px 4px no-repeat;
+	background: #fafafa url(data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2244%22%20height=%2212%22%20viewBox=%220%200%2044%2012%22%3E%3Ccircle%20cx=%226%22%20cy=%226%22%20r=%224%22%20fill=%22#FC625D%22/%3E%3Ccircle%20cx=%2222%22%20cy=%226%22%20r=%224%22%20fill=%22#FDBC40%22/%3E%3Ccircle%20cx=%2238%22%20cy=%226%22%20r=%224%22%20fill=%22#35CC4B%22/%3E%3C/svg%3E) 4px 4px no-repeat;
 	position: relative;
+	border: 1px solid #f0f0f0;
+	box-sizing: border-box;
 	padding: 20px 0 0 0;
 }
 
