Added search to navigations

--- a/_includes/navigation/top.html
+++ b/_includes/navigation/top.html
@@ -3,4 +3,5 @@
 	{% include navigation/logo.html %}
 	{% include navigation/main.html %}
 	{% include navigation/right.html %}
+	{% include navigation/search.html %}
 </div>
