Added search mobile styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,10 @@
 			document.getElementById("open-nav").addEventListener("click", function (event) {
 				event.preventDefault();
 				document.body.classList.toggle("nav-open");
+
+				if (document.body.classList.contains("nav-open")) {
+					document.getElementById("search-input").focus();
+				}
 			});
 		</script>
 	</body>
