--- a/_includes/navigation/footer.html
+++ b/_includes/navigation/footer.html
@@ -45,8 +45,8 @@
 	<div class="legal-line">
 		<p class="wrapper wrapper-large">
 			&copy; {{ site.time | date: '%Y' }} CloudCannon Ltd &bull;
-			<a href="https://cloudcannon.com/terms">Terms</a> &amp;
-			<a href="https://cloudcannon.com/privacy">Privacy</a>
+			<a href="https://cloudcannon.com/terms/">Terms</a> &amp;
+			<a href="https://cloudcannon.com/privacy/">Privacy</a>
 		</p>
 	</div>
 </footer>
