--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -151,7 +151,6 @@ iframe.screenshot {
 	}
 }
 
-.user-signed-in .hide-on-signed-in,
 .show-on-signed-in {
 	display: none;
 }
@@ -159,4 +158,8 @@ iframe.screenshot {
 .hide-on-signed-in,
 .user-signed-in .show-on-signed-in {
 	display: flex;
+}
+
+.user-signed-in .hide-on-signed-in {
+	display: none !important;
 }
