--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -151,6 +151,7 @@ iframe.screenshot {
 	}
 }
 
+.user-signed-in .hide-on-signed-in,
 .show-on-signed-in {
 	display: none;
 }
@@ -158,8 +159,4 @@ iframe.screenshot {
 .hide-on-signed-in,
 .user-signed-in .show-on-signed-in {
 	display: flex;
-}
-
-.user-signed-in .hide-on-signed-in {
-	display: none !important;
 }
