--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -279,6 +279,17 @@ header.plain  {
 			}
 		}
 
+		body:not(.user-signed-in) & > .right.show-on-signed-in,
+		.user-signed-in & > .right.hide-on-signed-in {
+			display: none;
+		}
+
+		body:not(.user-signed-in) & > .right.hide-on-signed-in,
+		.user-signed-in & > .right.show-on-signed-in {
+			display: flex;
+		}
+
+
 		.main {
 			margin-top: 0;
 			flex: 1;
