siblings non selected state

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -57,6 +57,13 @@ nav.siblings {
 		}
 	}
 
+	.no-active-replacement {
+		&:before,
+		&:after {
+			border-radius: 0;
+		}
+	}
+
 	&.light {
 		a.active,
 		.no-active-replacement {
