fix(landing page alternate cases and minimal nav case)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,15 +22,14 @@
 		{% include analytics.html %}
 	</head>
 
-	<body>
-
+	<body {% if site.body_class %}class="{{ site.body_class }}"{% endif %}>
 		{% include navigation/siblings.html %}
 		{{ content }}
 		{% include navigation/footer.html %}
 		<script>
 			var signedIn = /^(.*;)?\s*signed_in\s*=\s*[^;]+(.*)?$/.test(document.cookie);
 			document.body.className += ' ' + (signedIn ? 'user-signed-in' : '');
-			
+
 			document.getElementById("open-nav").addEventListener("click", function (event) {
 				event.preventDefault();
 				document.body.classList.toggle("nav-open");
