fixed analytics to pull from config

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,11 +1,13 @@
 {% if jekyll.environment == 'production' %}
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37472773-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+	{% if site.google_analytics_key %}
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37472773-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
 
-		gtag('config', 'UA-37472773-1');
-	</script>
+			gtag('config', {{ site.google_analytics_key | jsonify }});
+		</script>
+	{% endif %}
 {% endif %}
