--- a/_includes/navigation/right.html
+++ b/_includes/navigation/right.html
@@ -3,6 +3,6 @@
 	<a href="https://app.cloudcannon.com/users/sign_up" target="_blank" class="button keep-text-size {% if page.header_class == 'plain' or layout.header_class == 'plain' %}light{% else %}dark{% endif %}">Sign Up</a>
 </nav>
 
-<nav class="right show-on-signed-in" style="width: 190px;">
+<nav class="right show-on-signed-in" style="min-width: 190px;justify-content: flex-end;">
 	<a href="https://app.cloudcannon.com/editor" target="_blank" class="button keep-text-size {% if page.header_class == 'plain' or layout.header_class == 'plain' %}light{% else %}dark{% endif %}">Go to App</a>
 </nav>
