--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -39,7 +39,7 @@
 	border-radius: $border-radius;
 	margin-left: auto;
 	margin-right: auto;
-	background: #fafafa url(data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2244%22%20height=%2212%22%20viewBox=%220%200%2044%2012%22%3E%3Ccircle%20cx=%226%22%20cy=%226%22%20r=%224%22%20fill=%22#FC625D%22/%3E%3Ccircle%20cx=%2222%22%20cy=%226%22%20r=%224%22%20fill=%22#FDBC40%22/%3E%3Ccircle%20cx=%2238%22%20cy=%226%22%20r=%224%22%20fill=%22#35CC4B%22/%3E%3C/svg%3E) 4px 4px no-repeat;
+	background: #fafafa url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='44' height='12' viewBox='0 0 44 12'%3E%3Ccircle cx='6' cy='6' r='4' fill='%23FC625D'/%3E%3Ccircle cx='22' cy='6' r='4' fill='%23FDBC40'/%3E%3Ccircle cx='38' cy='6' r='4' fill='%2335CC4B'/%3E%3C/svg%3E") 4px 4px no-repeat;
 	position: relative;
 	border: 1px solid #f0f0f0;
 	box-sizing: border-box;
