--- a/_layouts/search-results.html
+++ b/_layouts/search-results.html
@@ -6,12 +6,17 @@ sitemap: false
 
 <section class="dark-content">
 	<div class="wrapper wrapper-large">
-		<p><span id="search-process">Loading</span> results <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span>:</p>
-		<ul id="search-results"></ul>
+		<form action="{{ site.baseurl }}/search/" method="get" class="content-search">
+			<input type="search" name="q" id="content-search-input" required data-autofocus placeholder="Search {{ site.url | replace_first: 'https://', '' }}" class="search-input">
+			<input type="submit" value="Search" style="display: none;">
+		</form>
+
+		<p id="search-results-status" class="search-results-status">Loading results...</p>
+		<ul id="search-results" class="search-results"></ul>
 
 		{{ content }}
 
-		<script src="/assets/js/lunr.min.js"></script>
+		<script src="/assets/js/lunr.js"></script>
 		<script src="/assets/js/search.js"></script>
 	</div>
 </section>
