--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -14,6 +14,7 @@
 @import "code-highlighting";
 @import "contact";
 @import "about";
+@import "search";
 @import "posts";
 @import "footer";
 @import "banner-notification";
