--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,7 +1,7 @@
 {% if jekyll.environment == 'production' %}
 	{% if site.google_analytics_key %}
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37472773-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics_key | jsonify }}"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
